# haybuy-backend

./: .coveragerc  .env.example  .env.test  .gitignore  .pylintrc  Dockerfile  Jenkinsfile  README.md  SONARQUBE_FIXES.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
app/: dependencies.py  main.py
app/core/: dependencies.py  security.py
app/db/: database.py
app/db/models/: __init__.py
app/db/models/Carts/: cart.py  cart_item.py
app/db/models/Categorys/: main.py
app/db/models/Chats/: chat.py  chat_member.py  chat_message.py
app/db/models/Groups/: group.py  groupMember.py  group_item.py  (+1 more)
app/rounters/v1/: __init__.py  auth_rounter.py  category_rounter.py  group_item_rounter.py  group_member_rounter.py  group_rounter.py  hello.py  item_rounter.py  transaction_rounter.py  user.py  user_profile_rounter.py  user_rounter.py  wish_item_rounter.py
app/routers/v1/: __init__.py  auth_rounter.py  auth_router.py  cart_router.py  category_rounter.py  category_router.py  chat_router.py  group_item_rounter.py  group_item_router.py  group_member_rounter.py  group_member_router.py  group_rounter.py  group_router.py  health.py  hello.py  item_rounter.py  item_router.py  transaction_rounter.py  transaction_router.py  user_profile_rounter.py  user_profile_router.py  user_rounter.py  user_router.py  wish_item_rounter.py  wish_item_router.py
app/schemas/: cart_item_response.py  cart_schema.py  category_schema.py  chat_member_schema.py  chat_message_schema.py  chat_schema.py  group_item_schema.py  group_member_schema.py  group_schema.py  item_schema.py  price_history.py  transaction_schema.py  user_profile_schema.py  user_schema.py  wish_item_schema.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CI_CD_GUIDE.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  TESTING_GUIDE.md
tests/: __init__.py  conftest.py  test_auth.py  test_categories.py  test_group_items.py  test_group_members.py  test_groups.py  test_items.py  test_transactions.py  test_user_profiles.py  test_users.py  test_wish_items.py
(+7 files in other folders)
