[project]
name = "test-init-fast"
version = "0.1.0"
description = ""
authors = [
    {name = "Charif",email = "hifrook.zen5@gmail.com"},
    {name = "Adithep",email = "adithepbaebmueann@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.111.0",
    "fastapi-cli (>=0.0.11,<0.0.12)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tzdata (>=2025.2,<2026.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "alembic>=1.13.0,<2.0.0",
    "uvicorn[standard]==0.30.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
